cleared cache example

--- a/tensorflow.ipynb
+++ b/tensorflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
        "0.00088863523"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -205,8 +205,8 @@
       "0.00755388243123889\n",
       "0.00014832262925360256\n",
       "9.077041126207062e-06\n",
-      "CPU times: user 10.2 ms, sys: 7.56 ms, total: 17.8 ms\n",
-      "Wall time: 18.7 ms\n"
+      "CPU times: user 38.4 ms, sys: 3.35 ms, total: 41.7 ms\n",
+      "Wall time: 45.2 ms\n"
      ]
     }
    ],
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
        " ['i', 'ni', 'di', 'hi']]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,6 +465,8 @@
     "        # if you want to use them all, lower_bound should be None\n",
     "        if lower_bound != None:\n",
     "            current = [option[0] for option in top if option[1] > lower_bound]\n",
+    "            # For debugging\n",
+    "            dropped = len(top) - len(current)\n",
     "        else:\n",
     "            current = [option[0] for option in top]\n",
     "    return top\n",
@@ -504,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +530,7 @@
        " ['ti', 'be', 'bi', 'ni']]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +554,7 @@
        " ['ሂ', 'ህ', 'ሒ', 'ሕ', 'ኂ', 'ኅ', 'ኺ', 'ኽ', 'ⷒ']]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,16 +568,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0003407415180388608"
+       "0.0001135805060129536"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,18 +589,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('ጥበብ', 0.0003407415180388608),\n",
-       " ('ጥብብ', 0.00016712199197519957),\n",
-       " ('ጥበቢ', 5.2772266842523096e-05)]"
+       "[('ጥበብ', 0.0001135805060129536),\n",
+       " ('ጥብብ', 5.570733065839986e-05),\n",
+       " ('ጥበቢ', 1.7590755614174365e-05)]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -614,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -627,14 +629,14 @@
     {
      "data": {
       "text/plain": [
-       "[('እኚዲህ', 1.2912732324268084e-06),\n",
-       " ('እንዲህ', 1.0768984923371857e-06),\n",
-       " ('እኚድህ', 6.676333432815534e-07),\n",
-       " ('እኚፂህ', 6.30446693303884e-07),\n",
-       " ('እንድህ', 5.567941182074277e-07)]"
+       "[('እኚዲህ', 3.228183081067021e-07),\n",
+       " ('እንዲህ', 2.692246230842964e-07),\n",
+       " ('እኚድህ', 1.6690833582038836e-07),\n",
+       " ('እኚፂህ', 1.57611673325971e-07),\n",
+       " ('እንድህ', 1.3919852955185693e-07)]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,8 +649,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -660,7 +664,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e723ee2deec44952a55c9da847253bdb",
+       "model_id": "ab92635d768c437984fa1a5a4e26037f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -681,19 +685,19 @@
     {
      "data": {
       "text/plain": [
-       "[('እኚዲህ', 1.2912732324268084e-06),\n",
-       " ('እንዲህ', 1.0768984923371857e-06),\n",
-       " ('እኚድህ', 6.676333432815534e-07),\n",
-       " ('እኚዲህኢ', 1.1928172818812837e-09),\n",
-       " ('እኚዲህእ', 1.1622429797274452e-09),\n",
-       " ('እንዲህኢ', 9.947880125088124e-10),\n",
-       " ('እንኢዲህ', 9.947877202886898e-10),\n",
-       " ('እንእዲህ', 9.692893114404342e-10),\n",
-       " ('እኚዽኢህ', 7.2780347937948e-10),\n",
-       " ('እኚዽእህ', 7.091488086803154e-10)]"
+       "[('እኚዲህ', 3.228183081067021e-07),\n",
+       " ('እንዲህ', 2.692246230842964e-07),\n",
+       " ('እኚድህ', 1.6690833582038836e-07),\n",
+       " ('እኚዲህኢ', 2.3856345637625673e-10),\n",
+       " ('እኚዲህእ', 2.3244859594548903e-10),\n",
+       " ('እንዲህኢ', 1.9895760250176246e-10),\n",
+       " ('እንኢዲህ', 1.9895754405773796e-10),\n",
+       " ('እንእዲህ', 1.9385786228808685e-10),\n",
+       " ('እኚዽኢህ', 1.45560695875896e-10),\n",
+       " ('እኚዽእህ', 1.4182976173606308e-10)]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,13 +710,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "17ae0e2898544947a95d3e963d02d248",
+       "model_id": "5cac5ed3eb7540c8ad6e2193ad0c9cd7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -733,14 +737,14 @@
     {
      "data": {
       "text/plain": [
-       "[('ትበንን', 9.604906497803702e-07),\n",
-       " ('ጥበንን', 5.077996745141277e-07),\n",
-       " ('ትበንኚ', 3.9157479688822224e-07),\n",
-       " ('ትበንእን', 2.055197662075888e-08),\n",
-       " ('ትእበንን', 2.0551974627401634e-08)]"
+       "[('ትበንን', 2.4012266244509255e-07),\n",
+       " ('ጥበንን', 1.2694991862853193e-07),\n",
+       " ('ትበንኚ', 9.789369922205556e-08),\n",
+       " ('ትበንእን', 4.110395324151776e-09),\n",
+       " ('ትእበንን', 4.110394925480327e-09)]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,14 +754,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Worst-case scenario, totally cleared cache"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "accc524e44014f8ca9f32fd1990f00d2",
+       "model_id": "1acf2158e758461b87b1f2bdc3897abd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -769,13 +780,6 @@
      "output_type": "display_data"
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "[('ያምዣደርጓትኸዊን', 2.2041002574484945e-21),\n",
@@ -785,12 +789,15 @@
        " ('ያምዣደርጓትኸዊንዕ', 2.3625757615350668e-23)]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "cont_cached = {}\n",
+    "cached = {}\n",
+    "\n",
     "# The cache will fill up as we go along, so\n",
     "# this word won't always take so long\n",
     "top_transcriptions(\"yamijadarguatkhawini\")"
