--- a/tensorflow.ipynb
+++ b/tensorflow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -39,15 +39,8 @@
     "with open('lat_eth.json') as f:\n",
     "    lat_eth = json.load(f)\n",
     "\n",
-    "eth2lat = {}\n",
-    "for lat in lat_eth.keys():\n",
-    "    for eth in lat_eth[lat]:\n",
-    "        if eth not in eth2lat.keys():\n",
-    "            eth2lat[eth] = []\n",
-    "        eth2lat[eth].append(lat)\n",
-    "\n",
-    "for key in eth2lat.keys():\n",
-    "    eth2lat[key] = set(eth2lat[key])\n",
+    "with open('eth_lat.json') as f:\n",
+    "    eth2lat = json.load(f)\n",
     "\n",
     "with open('char2idx.json') as f:\n",
     "    char2idx = json.load(f)\n",
