manual comparisons now allowed

--- a/05 - Test all models.ipynb
+++ b/05 - Test all models.ipynb
@@ -2306,6 +2306,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### For manual comparison of texts saved as files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.01828966880869995"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def compare_full_texts(preds, origs):\n",
+    "    total = 0\n",
+    "    matched = 0\n",
+    "    for pred, orig in zip(preds, origs):\n",
+    "        pred_words = [w for w in re.split('\\s+', pred) if w]\n",
+    "        orig_words = [w for w in re.split('\\s+', orig) if w]\n",
+    "        for word in pred_words:\n",
+    "            if word in orig_words:\n",
+    "                orig_words.remove(word)\n",
+    "                matched += 1\n",
+    "        total += matched + len(orig_words)\n",
+    "\n",
+    "    return matched / total\n",
+    "        \n",
+    "pred = open(\"temp/taitu_pred.txt\").read().replace(\"፡\", \"\").strip().splitlines()\n",
+    "orig = open(\"parallel_data/taitu_am.txt\").read().replace(\"፡\", \"\").strip().splitlines()\n",
+    "compare_full_texts(pred, orig)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
