update word model

--- a/05 - Test all models.ipynb
+++ b/05 - Test all models.ipynb
@@ -1588,7 +1588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1641,648 +1641,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing Simulated natural transliteration\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a00a288329454e309b45cc6808d9fdc8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=10), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c1626714bdec476fa30d90f1bac9d910",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=10), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "baee2e095d8f4104b890aa834a5c9923",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=10), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Processing The Lord's Prayer\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c5b00604394844d49b4ca4fada48ef67",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=10), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d208c5c8a54c4be4a0e7721b354b19c8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=10), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b0b02b86a0d549bcba5f5c84468eae28",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=10), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Processing \"Sera\"\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7323463a9d154dfc84bf6a3c7344aa2a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=127), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0b41d3001c164344b2252c430168d458",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=127), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f53a1d779c6b4af289fe2fb90f93ddfe",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=127), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Processing \"Taitu\"\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "271d44a575a048acb9515417bb032c1f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=95), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "381a1dde9ff04db8897d3b641dab8580",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=95), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9832f016ba0443c4b7fc56429e8da127",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=95), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Processing \"Tewodros\"\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "02e87c6ff859407f8e83b78db2fa9cb5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=56), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "535c2307942c4127b23fa4c1ae0a0940",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=56), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dd13aade6ca84377b2f5010d7e55a505",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=56), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Processing \"Yasstesseriyal\"\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7590340721cc4ddba88c7dff66edef1b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=55), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "447364612211433489da675fc9de0b6e",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=55), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aa61feba9cf448fe9a5b12e85925e39a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=55), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>lev_acc</th>\n",
-       "      <th>word_acc</th>\n",
-       "      <th>method</th>\n",
-       "      <th>dataset</th>\n",
-       "      <th>wordcount</th>\n",
-       "      <th>charcount</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.739485</td>\n",
-       "      <td>0.465517</td>\n",
-       "      <td>Character N-Grams</td>\n",
-       "      <td>Simulated natural transliteration</td>\n",
-       "      <td>175</td>\n",
-       "      <td>1572</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.570635</td>\n",
-       "      <td>0.080460</td>\n",
-       "      <td>Tensorflow</td>\n",
-       "      <td>Simulated natural transliteration</td>\n",
-       "      <td>175</td>\n",
-       "      <td>1572</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0.917378</td>\n",
-       "      <td>0.706897</td>\n",
-       "      <td>OpenNMT</td>\n",
-       "      <td>Simulated natural transliteration</td>\n",
-       "      <td>175</td>\n",
-       "      <td>1572</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.685354</td>\n",
-       "      <td>0.121212</td>\n",
-       "      <td>Character N-Grams</td>\n",
-       "      <td>The Lord's Prayer</td>\n",
-       "      <td>33</td>\n",
-       "      <td>290</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0.426812</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>Tensorflow</td>\n",
-       "      <td>The Lord's Prayer</td>\n",
-       "      <td>33</td>\n",
-       "      <td>290</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>0.765185</td>\n",
-       "      <td>0.142857</td>\n",
-       "      <td>OpenNMT</td>\n",
-       "      <td>The Lord's Prayer</td>\n",
-       "      <td>33</td>\n",
-       "      <td>290</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>0.687849</td>\n",
-       "      <td>0.327225</td>\n",
-       "      <td>Character N-Grams</td>\n",
-       "      <td>\"Sera\"</td>\n",
-       "      <td>371</td>\n",
-       "      <td>2630</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>0.477971</td>\n",
-       "      <td>0.078534</td>\n",
-       "      <td>Tensorflow</td>\n",
-       "      <td>\"Sera\"</td>\n",
-       "      <td>371</td>\n",
-       "      <td>2630</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>0.742630</td>\n",
-       "      <td>0.410995</td>\n",
-       "      <td>OpenNMT</td>\n",
-       "      <td>\"Sera\"</td>\n",
-       "      <td>371</td>\n",
-       "      <td>2630</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>0.448463</td>\n",
-       "      <td>0.180000</td>\n",
-       "      <td>Character N-Grams</td>\n",
-       "      <td>\"Taitu\"</td>\n",
-       "      <td>283</td>\n",
-       "      <td>2284</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>0.413573</td>\n",
-       "      <td>0.093333</td>\n",
-       "      <td>Tensorflow</td>\n",
-       "      <td>\"Taitu\"</td>\n",
-       "      <td>283</td>\n",
-       "      <td>2284</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>0.674160</td>\n",
-       "      <td>0.244300</td>\n",
-       "      <td>OpenNMT</td>\n",
-       "      <td>\"Taitu\"</td>\n",
-       "      <td>283</td>\n",
-       "      <td>2284</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>0.695831</td>\n",
-       "      <td>0.450382</td>\n",
-       "      <td>Character N-Grams</td>\n",
-       "      <td>\"Tewodros\"</td>\n",
-       "      <td>262</td>\n",
-       "      <td>2022</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>0.506261</td>\n",
-       "      <td>0.167939</td>\n",
-       "      <td>Tensorflow</td>\n",
-       "      <td>\"Tewodros\"</td>\n",
-       "      <td>262</td>\n",
-       "      <td>2022</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>0.817897</td>\n",
-       "      <td>0.576336</td>\n",
-       "      <td>OpenNMT</td>\n",
-       "      <td>\"Tewodros\"</td>\n",
-       "      <td>262</td>\n",
-       "      <td>2022</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>0.539644</td>\n",
-       "      <td>0.187500</td>\n",
-       "      <td>Character N-Grams</td>\n",
-       "      <td>\"Yasstesseriyal\"</td>\n",
-       "      <td>177</td>\n",
-       "      <td>1392</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>0.492073</td>\n",
-       "      <td>0.039773</td>\n",
-       "      <td>Tensorflow</td>\n",
-       "      <td>\"Yasstesseriyal\"</td>\n",
-       "      <td>177</td>\n",
-       "      <td>1392</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>0.684546</td>\n",
-       "      <td>0.180791</td>\n",
-       "      <td>OpenNMT</td>\n",
-       "      <td>\"Yasstesseriyal\"</td>\n",
-       "      <td>177</td>\n",
-       "      <td>1392</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     lev_acc  word_acc             method                            dataset  \\\n",
-       "0   0.739485  0.465517  Character N-Grams  Simulated natural transliteration   \n",
-       "1   0.570635  0.080460         Tensorflow  Simulated natural transliteration   \n",
-       "2   0.917378  0.706897            OpenNMT  Simulated natural transliteration   \n",
-       "3   0.685354  0.121212  Character N-Grams                  The Lord's Prayer   \n",
-       "4   0.426812  0.000000         Tensorflow                  The Lord's Prayer   \n",
-       "5   0.765185  0.142857            OpenNMT                  The Lord's Prayer   \n",
-       "6   0.687849  0.327225  Character N-Grams                             \"Sera\"   \n",
-       "7   0.477971  0.078534         Tensorflow                             \"Sera\"   \n",
-       "8   0.742630  0.410995            OpenNMT                             \"Sera\"   \n",
-       "9   0.448463  0.180000  Character N-Grams                            \"Taitu\"   \n",
-       "10  0.413573  0.093333         Tensorflow                            \"Taitu\"   \n",
-       "11  0.674160  0.244300            OpenNMT                            \"Taitu\"   \n",
-       "12  0.695831  0.450382  Character N-Grams                         \"Tewodros\"   \n",
-       "13  0.506261  0.167939         Tensorflow                         \"Tewodros\"   \n",
-       "14  0.817897  0.576336            OpenNMT                         \"Tewodros\"   \n",
-       "15  0.539644  0.187500  Character N-Grams                   \"Yasstesseriyal\"   \n",
-       "16  0.492073  0.039773         Tensorflow                   \"Yasstesseriyal\"   \n",
-       "17  0.684546  0.180791            OpenNMT                   \"Yasstesseriyal\"   \n",
-       "\n",
-       "    wordcount  charcount  \n",
-       "0         175       1572  \n",
-       "1         175       1572  \n",
-       "2         175       1572  \n",
-       "3          33        290  \n",
-       "4          33        290  \n",
-       "5          33        290  \n",
-       "6         371       2630  \n",
-       "7         371       2630  \n",
-       "8         371       2630  \n",
-       "9         283       2284  \n",
-       "10        283       2284  \n",
-       "11        283       2284  \n",
-       "12        262       2022  \n",
-       "13        262       2022  \n",
-       "14        262       2022  \n",
-       "15        177       1392  \n",
-       "16        177       1392  \n",
-       "17        177       1392  "
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "results = []\n",
     "methods = [\n",
     "    ['Character N-Grams', char_ngram_transliterate],\n",
     "    ['Tensorflow', tensorflow_transliterate],\n",
-    "#    ['Word N-Grams', word_ngram_transliterate],\n",
+    "   ['Word N-Grams', word_ngram_transliterate],\n",
     "   ['OpenNMT', opennmt_transliterate]\n",
     "]\n",
     "\n",
@@ -2314,20 +1681,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.01828966880869995"
-      ]
-     },
-     "execution_count": 86,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def compare_full_texts(preds, origs):\n",
     "    total = 0\n",
